homework-02/k8s/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework02-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: homework02
  template:
    metadata:
      labels:
        component: homework02
    spec:
      containers:
        - name: homework-02
          image: lekseich/homework-02:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
