homework-02/k8s/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework02-service
spec:
  type: ClusterIP
  selector:
    component: homework02
  ports:
    - protocol: TCP
      port: 8000
